--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,18 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+.toolbar-ios ion-title {
+    padding-left: 12px;
+    padding-right: 50px;
+    position:relative;
+
+    p {
+        font-size:0.6em;
+    }
+}
+
+.toolbar-title-ios {
+    text-align: left;
+}
