--- a/src/components/instagram-card/instagram-card.component.scss
+++ b/src/components/instagram-card/instagram-card.component.scss
@@ -48,4 +48,12 @@ instagram-card {
         padding:0px 16px;
     }
 
+    .grid > .row > .col {
+        padding-right: 2px !important;
+    }
+
+    .grid {
+        margin-top:5px;
+    }
+
 }
