modificado textos para idiomas i18n

--- a/src/components/instagram-card/instagram-card.component.html
+++ b/src/components/instagram-card/instagram-card.component.html
@@ -23,7 +23,7 @@
     </ion-row>
 
     <ion-row class="likes">
-      <p><strong>{{m.likes.count}} curtidas</strong></p>
+      <p><strong>{{m.likes.count}} {{ 'text_likes' | translate}}</strong></p>
     </ion-row>
 
     <ion-card-content>
