--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,11 +1,11 @@
 page-login {
 
     .content {
-        background-color: #E0F2F1;
+        background-color: #DCEDC8;
     }
 
     .login-content {
-        margin-top:25%;
+        margin-top:35%;
     }
 
     .icon {
