Retirados curtir/comments

--- a/src/components/instagram-card/instagram-card.component.scss
+++ b/src/components/instagram-card/instagram-card.component.scss
@@ -5,6 +5,10 @@ instagram-card {
         color:#999;
     }
 
+    .likes {
+        margin-top:10px;
+    }
+
     .item {
         ion-avatar {
         min-width: 35px;
